--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
+    "sharp": "^0.34.4",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
