chore: remove unused EmailJS environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,2 @@
-NEXT_PRIVATE_EMAILJS_USER_ID=
-NEXT_PUBLIC_EMAILJS_USER_ID=
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=
-MAX_REQUESTS=
-RATE_LIMIT_WINDOW=
-RECEIVER_MAIL_ADDRESS=
-RESEND_API_KEY=
+RECEIVER_MAIL_ADDRESS=your_email@example.com
+RESEND_API_KEY=your_resend_api_key
