--- a/package.json
+++ b/package.json
@@ -5,24 +5,21 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "email": "email dev",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "optimize": "next build && next export"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.6.0",
-    "@react-email/components": "0.0.25",
     "@vercel/analytics": "^1.3.1",
-    "framer-motion": "^11.11.17",
     "geist": "^1.3.1",
-    "lenis": "^1.2.3",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
-    "sharp": "^0.34.4",
-    "usehooks-ts": "^3.1.0"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@types/node": "^20",
