--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
+    "lenis": "^1.3.11",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,6 +27,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.5.5",
     "postcss": "^8",
     "react-email": "3.0.1",
     "tailwindcss": "^3.4.1",
