--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
     "lenis": "^1.3.11",
+    "lucide-react": "^0.546.0",
+    "motion": "^12.23.24",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
-    "sharp": "^0.34.4"
+    "sharp": "^0.34.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
