feat: implement chat interface and backend integration with Groq AI

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# Email Configuration
 RECEIVER_MAIL_ADDRESS=your_email@example.com
 RESEND_API_KEY=your_resend_api_key
+
+# Groq AI Configuration (optional)
+GROQ_API_KEY=your_groq_api_key_here
