--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
+    "groq-sdk": "^0.37.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
