--- a/package.json
+++ b/package.json
@@ -10,23 +10,21 @@
     "lint": "next lint",
     "email": "email dev",
     "format": "prettier --write .",
-    "optimize": "next build && next export"
+    "optimize": "next build && next export",
+    "cleanup-deps": "node scripts/cleanup-deps.js",
+    "cleanup-deps:debug": "node scripts/cleanup-deps.js --debug"
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
-    "geist": "^1.3.1",
     "groq-sdk": "^0.37.0",
     "lenis": "^1.3.11",
-    "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
-    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -37,7 +35,6 @@
     "eslint": "^8",
     "eslint-config-next": "15.5.5",
     "postcss": "^8",
-    "react-email": "3.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
