--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ RESEND_API_KEY=your_resend_api_key
 
 # Groq AI Configuration (optional)
 GROQ_API_KEY=your_groq_api_key_here
+
+# PostHog Configuration
+NEXT_PUBLIC_POSTHOG_KEY=your_posthog_project_api_key
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
