--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lenis": "^1.3.11",
     "motion": "^12.23.24",
     "next": "14.2.5",
+    "posthog-js": "^1.311.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
